--- a/tmux.conf
+++ b/tmux.conf
@@ -22,9 +22,8 @@ set -g default-terminal "screen-256color"
 # change the escape time in tmux to zero
 set-option -sg escape-time 0
 
-set -g status-fg white
-set -g status-bg brightwhite
-# set -g status-bg black
+set -g status-fg brightwhite
+set -g status-bg black
 set -g window-status-activity-attr bold
 set -g pane-border-fg blue
 set -g pane-active-border-fg blue
@@ -32,15 +31,12 @@ set -g message-fg black
 set -g message-bg white
 set -g message-attr bold
 
-# set-window-option -g window-status-current-fg brightwhite
-set-window-option -g window-status-current-fg black
+set-window-option -g window-status-current-fg cyan
 
-set-option -g status-left "#(~/.tmux/tmux-powerline/powerline.sh left)"
-
- set -g window-status-format ""
- set -g window-status-current-format "#[fg=brightwhite,bg=blue]⮀#[fg=brightwhite,bg=blue,noreverse,nobold] ❐ #{session_windows} #[fg=blue,bg=white]⮀ #[fg=black,bg=white,noreverse,bold]#W #[fg=white,bg=brightwhite,nobold]⮀"
-set-option -g status-right "#(~/.tmux/tmux-powerline/powerline.sh right)"
-
+set-option -g status-left ""
+set-option -g status-right ""
+set -g window-status-format ""
+set -g window-status-current-format "Run vim to load tmux status-line"
 
 # enable vim mode
 setw -g mode-keys vi
