--- a/tmux.conf
+++ b/tmux.conf
@@ -1,51 +1,55 @@
-set-option -g status on
-set-option -g status-interval 2
-set-option -g status-utf8 on
-set-option -g status-justify "centre"
-set-option -g status-left-length 200
-set-option -g status-right-length 200
-
-# Remove the default keybinding
-unbind C-r
-
 # Set a new keybinding to C-t. In terminals C-t
+unbind C-r
 unbind C-b
 set -g prefix C-t
 bind C-t send-prefix
 
-# lower interval for faster updates
-set -g status-interval 1
-
-# Set term color properly
-set -g default-terminal "screen-256color"
-
 # change the escape time in tmux to zero
 set-option -sg escape-time 0
 
+# shell & terminal
+# set -g defaut-terminal "xterm-256color"
+set -g default-command /bin/zsh
+set -g default-shell /bin/zsh
+set -g terminal-overrides "screen.xterm-new"
+
+# start with window 1 (instead of 0)
+set -g base-index 1
+
+# start with pane 1
+set -g pane-base-index 1
+
+# Status options
+set-option -g status on
+set-option -g status-interval 1
+set-option -g status-utf8 on
+set-option -g status-justify "left"
+set-option -g status-left-length 200
+set-option -g status-right-length 200
+
+# Status and window appearance and style
 set -g status-fg brightwhite
 set -g status-bg black
-set -g window-status-activity-attr bold
 set -g pane-border-fg blue
 set -g pane-active-border-fg blue
 set -g message-fg black
 set -g message-bg white
 set -g message-attr bold
 
-set-window-option -g window-status-current-fg cyan
+# window status
+setw -g window-status-format "#[bg=black, fg=cyan, noreverse] #I #[bg=brightblack, fg=brightcyan, noreverse] #W "
+setw -g window-status-current-format "#[bg=brightblue, fg=white, noreverse] #I #[fg=brightcyan, bg=brightgreen] #W "
+setw -g window-status-current-attr dim
+setw -g window-status-bg green
+setw -g window-status-fg black
+set -g window-status-attr reverse
+set -g window-status-activity-attr bold
 
 set-option -g status-left ""
-set-option -g status-right ""
-set -g window-status-format ""
-set -g window-status-current-format "Run vim to load tmux status-line"
+set-option -g status-right "#(~/.tmux/prompt.sh right)"
 
 # enable vim mode
 setw -g mode-keys vi
-
-# Act like vim for selecting panes
-#bind h select-pane -L
-#bind j select-pane -D
-#bind k select-pane -U
-#bind l select-pane -R
 
 # smart pane switching with awareness of vim splits
 bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
@@ -76,6 +80,7 @@ bind r source-file ~/.tmux.conf
 unbind n
 bind-key n run-shell "tmux rename-session $(basename $(git rev-parse --show-toplevel))"
 
+# Copy mode with C-t S
 bind S copy-mode
 
 # quick pane cycling
