--- a/tmux.conf
+++ b/tmux.conf
@@ -29,7 +29,7 @@ set-option -g status-right-length 200
 
 # Status and window appearance and style
 set -g status-fg brightwhite
-set -g status-bg black
+set -g status-bg black # change to black for gotham
 set -g pane-border-fg blue
 set -g pane-active-border-fg blue
 set -g message-fg black
@@ -37,7 +37,13 @@ set -g message-bg white
 set -g message-attr bold
 
 # window status
+#
+# Solarized light
+# setw -g window-status-format "#[bg=white, fg=brightgreen, noreverse] #I #[bg=white, fg=brightgreen, noreverse] #W "
+
+# Gotham
 setw -g window-status-format "#[bg=black, fg=cyan, noreverse] #I #[bg=brightblack, fg=brightcyan, noreverse] #W "
+
 setw -g window-status-current-format "#[bg=brightblue, fg=white, noreverse] #I #[fg=brightcyan, bg=brightgreen] #W "
 setw -g window-status-current-attr dim
 setw -g window-status-bg green
