Fix fzf colors in tmux sessions.

--- a/tmux.conf
+++ b/tmux.conf
@@ -8,10 +8,9 @@ bind C-t send-prefix
 set-option -sg escape-time 0
 
 # shell & terminal
-# set -g defaut-terminal "xterm-256color"
 set -g default-command /bin/zsh
 set -g default-shell /bin/zsh
-set -g terminal-overrides "screen.xterm-new"
+set -g terminal-overrides "screen-256.xterm-new"
 
 # start with window 1 (instead of 0)
 set -g base-index 1
@@ -77,6 +76,9 @@ set -g visual-activity on
 
 # fix for terminal-notifier
 set-option -g default-command "reattach-to-user-namespace -l zsh"
+
+# keep new-window 'terminal command' open after the command exits with 0
+set-option remain-on-exit on
 
 # reload tmux file
 unbind r
