Add sessions and undohistory to gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 .DS_Store
 elpa
+config/nvim/sessions/
+config/nvim/UndoHistory/
+config/nvim/.netrwhist
+config/nvim/plugged/
+config/nvim/autoload/
+config/nvim/spell/
+*~
