make colors of tmux somewhat decent in gruvbox

--- a/tmux.conf
+++ b/tmux.conf
@@ -21,7 +21,6 @@ set -g pane-base-index 1
 # Status options
 set-option -g status on
 set-option -g status-interval 1
-set-option -g status-utf8 on
 set-option -g status-justify "left"
 set-option -g status-left-length 200
 set-option -g status-right-length 200
@@ -29,8 +28,8 @@ set-option -g status-right-length 200
 # Status and window appearance and style
 set -g status-fg brightwhite
 set -g status-bg black # change to black for gotham
-set -g pane-border-fg blue
-set -g pane-active-border-fg blue
+set -g pane-border-fg brightred
+set -g pane-active-border-fg brightred
 set -g message-fg black
 set -g message-bg white
 set -g message-attr bold
@@ -41,11 +40,14 @@ set -g message-attr bold
 # setw -g window-status-format "#[bg=white, fg=brightgreen, noreverse] #I #[bg=white, fg=brightgreen, noreverse] #W "
 
 # Gotham
-setw -g window-status-format "#[bg=black, fg=cyan, noreverse] #I #[bg=brightblack, fg=brightcyan, noreverse] #W "
+# setw -g window-status-format "#[bg=black, fg=cyan, noreverse] #I #[bg=brightblack, fg=brightcyan, noreverse] #W "
+# setw -g window-status-current-format "#[bg=brightblue, fg=white, noreverse] #I #[fg=brightcyan, bg=brightgreen] #W "
 
-setw -g window-status-current-format "#[bg=brightblue, fg=white, noreverse] #I #[fg=brightcyan, bg=brightgreen] #W "
+setw -g window-status-format "#[bg=black, fg=brightred, noreverse] #I #W "
+setw -g window-status-current-format "#[bg=red, fg=black, noreverse] #I #[fg=black, bg=brightred] #W "
+
 setw -g window-status-current-attr dim
-setw -g window-status-bg green
+setw -g window-status-bg black
 setw -g window-status-fg black
 set -g window-status-attr reverse
 set -g window-status-activity-attr bold
