--- a/tmux.conf
+++ b/tmux.conf
@@ -10,7 +10,9 @@ set-option -sg escape-time 0
 # shell & terminal
 set -g default-command /bin/zsh
 set -g default-shell /bin/zsh
-set -g terminal-overrides "screen-256.xterm-new"
+# set -g terminal-overrides "screen-256.xterm-new"
+
+set -ga terminal-overrides ",xterm-256color-italic:Tc"
 
 # start with window 1 (instead of 0)
 set -g base-index 1
@@ -27,9 +29,9 @@ set-option -g status-right-length 200
 
 # Status and window appearance and style
 set -g status-fg brightwhite
-set -g status-bg black # change to black for gotham
-set -g pane-border-fg brightred
-set -g pane-active-border-fg brightred
+set -g status-bg brightblack # change to black for gotham
+set -g pane-border-fg green
+set -g pane-active-border-fg green
 set -g message-fg black
 set -g message-bg white
 set -g message-attr bold
@@ -43,8 +45,8 @@ set -g message-attr bold
 # setw -g window-status-format "#[bg=black, fg=cyan, noreverse] #I #[bg=brightblack, fg=brightcyan, noreverse] #W "
 # setw -g window-status-current-format "#[bg=brightblue, fg=white, noreverse] #I #[fg=brightcyan, bg=brightgreen] #W "
 
-setw -g window-status-format "#[bg=black, fg=brightred, noreverse] #I #W "
-setw -g window-status-current-format "#[bg=red, fg=black, noreverse] #I #[fg=black, bg=brightred] #W "
+setw -g window-status-format "#[bg=black, fg=brightblack, noreverse]#[bg=default, fg=brightgreen, noreverse] #I #W #[bg=brightblack, fg=black, noreverse]"
+setw -g window-status-current-format "#[bg=green, fg=brightblack, noreverse]#[bg=green, fg=black, noreverse] #I #W #[bg=brightblack, fg=green, noreverse]"
 
 setw -g window-status-current-attr dim
 setw -g window-status-bg black
