--- a/tmux.conf
+++ b/tmux.conf
@@ -12,7 +12,8 @@ set -g default-command /bin/zsh
 set -g default-shell /bin/zsh
 # set -g terminal-overrides "screen-256.xterm-new"
 
-set -ga terminal-overrides ",xterm-256color-italic:Tc"
+set -ga terminal-overrides "xterm-256color"
+# set -ga terminal-overrides ",xterm-256color-italic:Tc"
 
 # start with window 1 (instead of 0)
 set -g base-index 1
@@ -31,7 +32,9 @@ set-option -g status-right-length 200
 set -g status-fg brightwhite
 set -g status-bg black # change to black for gotham
 set -g pane-border-fg green
-set -g pane-active-border-fg green
+set -g pane-active-border-fg brightgreen
+set -g window-style 'fg=default,bg=colour000'
+set -g window-active-style 'fg=default,bg=colour008'
 set -g message-fg black
 set -g message-bg white
 set -g message-attr bold
@@ -67,9 +70,23 @@ setw -g mode-keys vi
 
 # smart pane switching with awareness of vim splits
 bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
+bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
 bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
 bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
-bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
+
+# Pane resizing
+bind-key -r H resize-pane -L "5"
+bind-key -r L resize-pane -R "5"
+bind-key -r J resize-pane -D "5"
+bind-key -r K resize-pane -U "5"
+
+# switch between previous and next pane
+bind-key C-n next-window
+bind-key C-p previous-window
+
+# move panes (cycle) left and right
+bind-key -r "<" swap-window -t -1
+bind-key -r ">" swap-window -t +1
 
 # setup 'v' to begin selection as in Vim
 bind-key -t vi-copy v begin-selection
