Update tmux conf.

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,4 @@
-# Set a new keybinding to C-t. In terminals C-t
+# Set a new keybinding to C-t.
 unbind C-r
 unbind C-b
 set -g prefix C-t
@@ -10,7 +10,6 @@ set-option -sg escape-time 0
 # shell & terminal
 set -g default-command /bin/zsh
 set -g default-shell /bin/zsh
-# set -g terminal-overrides "screen-256.xterm-new"
 
 set -ga terminal-overrides "xterm-256color"
 # set -ga terminal-overrides ",xterm-256color-italic:Tc"
@@ -31,10 +30,10 @@ set-option -g status-right-length 200
 # Status and window appearance and style
 set -g status-fg brightwhite
 set -g status-bg black # change to black for gotham
-set -g pane-border-fg green
+set -g pane-border-fg brightgreen
 set -g pane-active-border-fg brightgreen
-set -g window-style 'fg=default,bg=colour000'
-set -g window-active-style 'fg=default,bg=colour008'
+# set -g window-style 'fg=default,bg=colour000'
+# set -g window-active-style 'fg=default,bg=colour008'
 set -g message-fg black
 set -g message-bg white
 set -g message-attr bold
@@ -52,7 +51,7 @@ set -g message-attr bold
 # setw -g window-status-format "#[bg=black, fg=brightblack, noreverse]#[bg=default, fg=brightgreen, noreverse] #I #W #[bg=brightblack, fg=black, noreverse]"
 # setw -g window-status-current-format "#[bg=green, fg=brightblack, noreverse]#[bg=green, fg=black, noreverse] #I #W #[bg=brightblack, fg=green, noreverse]"
 
-# Grunbox
+# Gruvbox
 setw -g window-status-format "#[bg=default, fg=green, noreverse] #I #[bg=default, fg=brightgreen, noreverse]#W"
 setw -g window-status-current-format "#[bg=green, fg=black, noreverse] #I #[bg=brightgreen, fg=black, noreverse] #W "
 
@@ -91,10 +90,6 @@ bind-key -r ">" swap-window -t +1
 # setup 'v' to begin selection as in Vim
 bind-key -t vi-copy v begin-selection
 bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-
-# setup 'L' and 'H' to jump to beginning and end of line to match my vim bindings
-bind-key -t vi-copy H start-of-line
-bind-key -t vi-copy L end-of-line
 
 # visual notification of activity in other windows
 setw -g monitor-activity on
