Cleanup tmux config.

--- a/tmux.conf
+++ b/tmux.conf
@@ -32,26 +32,11 @@ set -g status-fg brightwhite
 set -g status-bg black # change to black for gotham
 set -g pane-border-fg brightgreen
 set -g pane-active-border-fg brightgreen
-# set -g window-style 'fg=default,bg=colour000'
-# set -g window-active-style 'fg=default,bg=colour008'
 set -g message-fg black
 set -g message-bg white
 set -g message-attr bold
 
 # window status
-#
-# Solarized light
-# setw -g window-status-format "#[bg=white, fg=brightgreen, noreverse] #I #[bg=white, fg=brightgreen, noreverse] #W "
-
-# Gotham
-# setw -g window-status-format "#[bg=black, fg=cyan, noreverse] #I #[bg=brightblack, fg=brightcyan, noreverse] #W "
-# setw -g window-status-current-format "#[bg=brightblue, fg=white, noreverse] #I #[fg=brightcyan, bg=brightgreen] #W "
-
-# Solarized
-# setw -g window-status-format "#[bg=black, fg=brightblack, noreverse]#[bg=default, fg=brightgreen, noreverse] #I #W #[bg=brightblack, fg=black, noreverse]"
-# setw -g window-status-current-format "#[bg=green, fg=brightblack, noreverse]#[bg=green, fg=black, noreverse] #I #W #[bg=brightblack, fg=green, noreverse]"
-
-# Gruvbox
 setw -g window-status-format "#[bg=default, fg=green, noreverse] #I #[bg=default, fg=brightgreen, noreverse]#W"
 setw -g window-status-current-format "#[bg=green, fg=black, noreverse] #I #[bg=brightgreen, fg=black, noreverse] #W "
 
@@ -106,8 +91,8 @@ unbind r
 bind r source-file ~/.tmux.conf
 
 # rename session to git repo
-unbind n
-bind-key n run-shell "tmux rename-session $(basename $(git rev-parse --show-toplevel))"
+# unbind n
+# bind-key n run-shell "tmux rename-session $(basename $(git rev-parse --show-toplevel))"
 
 # Copy mode with C-t S
 bind S copy-mode
