Fix copying to osx clipboard

--- a/tmux.conf
+++ b/tmux.conf
@@ -27,8 +27,8 @@ setw -g mode-keys vi # enable vim mode
 
 # vi-copy settings {{{
   bind-key -t vi-copy v begin-selection
-  # bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-  bind-key -t vi-copy y copy-selection
+  bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+  # bind-key -t vi-copy y copy-selection
   bind-key -t vi-copy C-v rectangle-toggle
   bind-key -t vi-copy Escape cancel
 # }}}
