Switch back to nerdfont and Cake16 colorscheme

--- a/tmux.conf
+++ b/tmux.conf
@@ -111,20 +111,20 @@ set-option remain-on-exit on # keep new-window 'terminal command' open after the
 
 # Status and window appearance and style {{{
   set -g status-fg brightwhite
-  set -g status-bg black # change to black for gotham
-  set -g pane-border-fg brightgreen
-  set -g pane-active-border-fg brightgreen
-  set -g message-fg black
+  set -g status-bg white # change to black for gotham
+  set -g pane-border-fg colour004
+  set -g pane-active-border-fg colour004
+  set -g message-fg red
   set -g message-bg white
   set -g message-attr bold
 
   setw -g window-status-current-attr dim
-  setw -g window-status-bg colour009
-  setw -g window-status-fg black
+  setw -g window-status-bg colour003
+  setw -g window-status-fg white
   set -g window-status-attr reverse
   set -g window-status-activity-attr bold
   window_status_current_format='#{circled_window_index} #W'
-  window_status_format='#[bg=colour008]#{circled_window_index} #W'
+  window_status_format='#[bg=colour013]#{circled_window_index} #W'
 # }}}
 
 
