Simplify window status and change prompt

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,3 @@
-# cat << ►_◄ > /dev/null
-
-
 # ── General settings ──────────────────────────────────────────────────────────────────────────────
 
 # Set a new keybinding to C-t {{{
@@ -17,8 +14,9 @@ set-option -g history-limit 500000 # Increase scrollback history
 set -g default-shell /bin/zsh
 set -g default-command "reattach-to-user-namespace -l zsh" # fix terminal-notifier
 
-# set -ga terminal-overrides "xterm-256color"
-set -ga terminal-overrides ",xterm-256color-italic:Tc"
+# Enable true (24bit) colors for version >= 2.2
+# See https://deductivelabs.com/en/2016/03/using-true-color-vim-tmux/
+set -ga terminal-overrides ",xterm-256color:Tc"
 
 set -g base-index 1 # start with window 1 (instead of 0)
 set -g pane-base-index 1 # start with pane 1
@@ -58,10 +56,13 @@ bind e new-window -n '~/.tmux.conf' "zsh -c '\${EDITOR:-nvim} ~/.tmux.conf && tm
 # ── Pane settings ─────────────────────────────────────────────────────────────────────────────────
 
 # smart pane switching with awareness of vim splits {{{
-  bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
-  bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
-  bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
-  bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
+  is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+      | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+  bind-key -n C-h if-shell "$is_vim" "send-keys Space wh"  "select-pane -L"
+  bind-key -n C-j if-shell "$is_vim" "send-keys Space wj"  "select-pane -D"
+  bind-key -n C-k if-shell "$is_vim" "send-keys Space wk"  "select-pane -U"
+  bind-key -n C-l if-shell "$is_vim" "send-keys Space wl"  "select-pane -R"
+  bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 # }}}
 
 # Pane resizing {{{
@@ -93,9 +94,9 @@ set-option remain-on-exit on # keep new-window 'terminal command' open after the
 
 # Status options {{{
   set-option -g status on
-  set-option -g status-interval 3000     # redraw status line every 10 seconds
+  set-option -g status-interval 1     # redraw status line every 10 seconds
   set-option -g status-justify "left"
-  set-option -g status-left-length 100
+  set-option -g status-left-length 20
   set-option -g status-right-length 500
 # }}}
 
@@ -110,27 +111,31 @@ set-option remain-on-exit on # keep new-window 'terminal command' open after the
 # }}}
 
 # Status and window appearance and style {{{
-  set -g status-fg brightwhite
-  set -g status-bg white # change to black for gotham
+  set -g status-fg brightblack
+  set -g status-bg black # change to black for gotham
   set -g pane-border-fg colour004
   set -g pane-active-border-fg colour004
   set -g message-fg red
-  set -g message-bg white
+  set -g message-bg black
   set -g message-attr bold
 
-  setw -g window-status-current-attr dim
-  setw -g window-status-bg colour003
-  setw -g window-status-fg white
-  set -g window-status-attr reverse
+  set -g window-status-separator " "
+  set -g window-status-bell-fg black
+  set -g window-status-bell-bg brightred
   set -g window-status-activity-attr bold
-  window_status_current_format='#{circled_window_index} #W'
-  window_status_format='#[bg=colour013]#{circled_window_index} #W'
+
+  set -g window-status-fg black
+  set -g window-status-bg brightblue
+  set -g window-status-current-fg brightwhite
+  set -g window-status-current-bg black
+  set -g window-status-format " #I:#W "
+  set -g window-status-current-format " ❐ #I:#W "
 # }}}
 
 
 # status line {{{
-  set-option -g status-left "#(~/.tmux/prompt.sh left)  "
-  set-option -g status-right ""
+  set-option -g status-left "#[fg=black,bg=brightblue, bold]  #S #[default]    "
+  set-option -g status-right "#(~/.tmux/prompt.sh right)"
 # }}}
 
 # Tmux plugins {{{
@@ -141,36 +146,3 @@ set-option remain-on-exit on # keep new-window 'terminal command' open after the
     tmux-plugins/tmux-copycat       \
   '
 # }}}
-
-# -- 8< ------------------------------------------------------------------------
-
-run 'cut -c3- ~/.tmux.conf | sh -s _set_window_status'
-
-
-# ►_◄
-#
-# # exit the script if any statement returns a non-true return value
-# set -e
-#
-# _set_window_status() {
-#   window_status_format=${window_status_format:-'#I #W '}
-#   window_status_current_format=${window_status_current_format:-'#I #W'}
-#   window_status_format=$(echo "$window_status_format" | sed 's%#{circled_window_index}%#(cut -c3- ~/.tmux.conf | sh -s _circled_digit #I)%g')
-#   window_status_current_format=$(echo "$window_status_current_format" | sed 's%#{circled_window_index}%#(cut -c3- ~/.tmux.conf | sh -s _circled_digit #I)%g')
-#   tmux setw -g window-status-format "$window_status_format" \;\
-#        setw -g window-status-current-format "$window_status_current_format"
-# }
-#
-# _circled_digit() {
-#     circled_digits='⓪ ① ② ③ ④ ⑤ ⑥ ⑦ ⑧ ⑨ ⑩ ⑪ ⑫ ⑬ ⑭ ⑮ ⑯ ⑰ ⑱ ⑲ ⑳'
-#   # circled_digits='❶ ❷ ❸ ❹ ❺ ❻ ❼ ❽ ❾ ❿'
-#   if [ "$1" -le 10 ] 2>/dev/null; then
-#     i=$(( $1 + 1 ))
-#     eval set -- "$circled_digits"
-#     eval echo "\${$i}"
-#   else
-#     echo "$1"
-#   fi
-# }
-#
-# "$@"
