Start working on adding Arc output to tmux prompt.

--- a/tmux.conf
+++ b/tmux.conf
@@ -124,10 +124,10 @@ set-option remain-on-exit on # keep new-window 'terminal command' open after the
   set -g window-status-bell-bg brightred
   set -g window-status-activity-attr bold
 
-  set -g window-status-fg black
-  set -g window-status-bg brightblue
-  set -g window-status-current-fg brightwhite
-  set -g window-status-current-bg black
+  set -g window-status-fg brightwhite
+  set -g window-status-bg black
+  set -g window-status-current-fg black
+  set -g window-status-current-bg brightblue
   set -g window-status-format " #I:#W "
   set -g window-status-current-format " ❐ #I:#W "
 # }}}
