--- a/tmux.conf
+++ b/tmux.conf
@@ -96,7 +96,7 @@ set-option remain-on-exit on # keep new-window 'terminal command' open after the
   set-option -g status on
   set-option -g status-interval 1     # redraw status line every 10 seconds
   set-option -g status-justify "left"
-  set-option -g status-left-length 20
+  set-option -g status-left-length 120
   set-option -g status-right-length 500
 # }}}
 
@@ -134,7 +134,7 @@ set-option remain-on-exit on # keep new-window 'terminal command' open after the
 
 
 # status line {{{
-  set-option -g status-left "#[fg=black,bg=brightblue, bold]  #S #[default]    "
+  set-option -g status-left "#[fg=black,bg=brightblue, bold]  #S #[default] #(~/.tmux/prompt.sh left)  "
   set-option -g status-right "#(~/.tmux/prompt.sh right)"
 # }}}
 
