Disable goldenview and switch to NetRw

--- a/tmux.conf
+++ b/tmux.conf
@@ -55,16 +55,6 @@ bind e new-window -n '~/.tmux.conf' "zsh -c '\${EDITOR:-nvim} ~/.tmux.conf && tm
 
 # ── Pane settings ─────────────────────────────────────────────────────────────────────────────────
 
-# smart pane switching with awareness of vim splits {{{
-  is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-      | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-  bind-key -n C-h if-shell "$is_vim" "send-keys Space wh"  "select-pane -L"
-  bind-key -n C-j if-shell "$is_vim" "send-keys Space wj"  "select-pane -D"
-  bind-key -n C-k if-shell "$is_vim" "send-keys Space wk"  "select-pane -U"
-  bind-key -n C-l if-shell "$is_vim" "send-keys Space wl"  "select-pane -R"
-  bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
-# }}}
-
 # Pane resizing {{{
   bind-key -r H resize-pane -L "5"
   bind-key -r L resize-pane -R "5"
@@ -144,5 +134,6 @@ set-option remain-on-exit on # keep new-window 'terminal command' open after the
     tmux-plugins/tmux-resurrect     \
     tmux-plugins/tmux-yank          \
     tmux-plugins/tmux-copycat       \
+    christoomey/vim-tmux-navigator  \
   '
 # }}}
