Several small changes related to tmux navigator.

--- a/tmux.conf
+++ b/tmux.conf
@@ -136,4 +136,6 @@ set-option remain-on-exit on # keep new-window 'terminal command' open after the
     tmux-plugins/tmux-copycat       \
     christoomey/vim-tmux-navigator  \
   '
+  # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+  run '~/.tmux/plugins/tpm/tpm'
 # }}}
