Fix tmux true color, add some vim colorschemes, disable vim-hardtime

--- a/tmux.conf
+++ b/tmux.conf
@@ -16,8 +16,7 @@ set -g default-command "reattach-to-user-namespace -l zsh" # fix terminal-notifi
 
 # Enable true (24bit) colors for version >= 2.2
 # See https://deductivelabs.com/en/2016/03/using-true-color-vim-tmux/
-set -ga terminal-overrides ",xterm-256color:Tc"
-
+set -ga terminal-overrides ',*:Tc'
 set -g base-index 1 # start with window 1 (instead of 0)
 set -g pane-base-index 1 # start with pane 1
 
