--- a/tmux.conf
+++ b/tmux.conf
@@ -101,7 +101,7 @@ set-option remain-on-exit on # keep new-window 'terminal command' open after the
 
 # Status and window appearance and style {{{
   set -g status-fg brightblack
-  set -g status-bg black # change to black for gotham
+  set -g status-bg black
   set -g pane-border-fg colour009
   set -g pane-active-border-fg colour009
   set -g message-fg red
