Remove remain-on-exit option

--- a/tmux.conf
+++ b/tmux.conf
@@ -71,7 +71,7 @@ bind e new-window -n '~/.tmux.conf' "zsh -c '\${EDITOR:-nvim} ~/.tmux.conf && tm
   bind-key -r ">" swap-window -t +1
 # }}}
 
-set-option remain-on-exit on # keep new-window 'terminal command' open after the command exits 0
+# set-option remain-on-exit on # keep new-window 'terminal command' open after the command exits 0
 
 # quick pane cycling {{{
   unbind ^A
