Remove redundant options, and add neovim session restore to resurrect

--- a/tmux.conf
+++ b/tmux.conf
@@ -24,8 +24,6 @@ setw -g mode-keys vi # enable vim mode
 
 # vi-copy settings {{{
   bind-key -t vi-copy v begin-selection
-  bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-  # bind-key -t vi-copy y copy-selection
   bind-key -t vi-copy C-v rectangle-toggle
   bind-key -t vi-copy Escape cancel
 # }}}
@@ -51,6 +49,10 @@ bind e new-window -n '~/.tmux.conf' "zsh -c '\${EDITOR:-nvim} ~/.tmux.conf && tm
   bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
 # }}}
 
+# Tmux resurrect {{{
+  # restore neovim session if Session.vim file is present
+  set -g @resurrect-strategy-nvim 'session'
+# }}}
 
 # ── Pane settings ─────────────────────────────────────────────────────────────────────────────────
 
@@ -128,13 +130,17 @@ bind e new-window -n '~/.tmux.conf' "zsh -c '\${EDITOR:-nvim} ~/.tmux.conf && tm
 # }}}
 
 # Tmux plugins {{{
-  set -g @tpm_plugins '             \
-    tmux-plugins/tpm                \
-    tmux-plugins/tmux-resurrect     \
-    tmux-plugins/tmux-yank          \
-    tmux-plugins/tmux-copycat       \
-    christoomey/vim-tmux-navigator  \
-  '
-  # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-  run '~/.tmux/plugins/tpm/tpm'
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-open'
+set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+
+# Check if tmux plugin manager is installed, otherwise clone it.
+if "test ! -d ~/.tmux/plugins/tpm" \
+   "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
 # }}}
