Add continuum and some other tmux plugins

--- a/tmux.conf
+++ b/tmux.conf
@@ -49,9 +49,10 @@ bind e new-window -n '~/.tmux.conf' "zsh -c '\${EDITOR:-nvim} ~/.tmux.conf && tm
   bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
 # }}}
 
-# Tmux resurrect {{{
-  # restore neovim session if Session.vim file is present
-  set -g @resurrect-strategy-nvim 'session'
+# Tmux resurrect / continuum {{{
+  set -g @resurrect-strategy-nvim 'session' # restore neovim session if Session.vim file is present
+  set -g @continuum-save-interval '5' # save every 5 minutes
+  set -g @continuum-restore 'on' # auto restore on boot
 # }}}
 
 # ── Pane settings ─────────────────────────────────────────────────────────────────────────────────
@@ -132,9 +133,11 @@ bind e new-window -n '~/.tmux.conf' "zsh -c '\${EDITOR:-nvim} ~/.tmux.conf && tm
 # Tmux plugins {{{
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @plugin 'tmux-plugins/tmux-open'
+set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
 # Check if tmux plugin manager is installed, otherwise clone it.
