Update tmux statusline to complement cake16 vim colorscheme

--- a/tmux.conf
+++ b/tmux.conf
@@ -102,10 +102,10 @@ bind e new-window -n '~/.tmux.conf' "zsh -c '\${EDITOR:-nvim} ~/.tmux.conf && tm
 # }}}
 
 # Status and window appearance and style {{{
-  set -g status-fg brightblack
+  set -g status-fg white
   set -g status-bg black
-  set -g pane-border-fg colour009
-  set -g pane-active-border-fg colour009
+  set -g pane-border-fg colour012
+  set -g pane-active-border-fg colour012
   set -g message-fg red
   set -g message-bg black
   set -g message-attr bold
@@ -115,10 +115,10 @@ bind e new-window -n '~/.tmux.conf' "zsh -c '\${EDITOR:-nvim} ~/.tmux.conf && tm
   set -g window-status-bell-bg brightred
   set -g window-status-activity-attr bold
 
-  set -g window-status-fg brightwhite
-  set -g window-status-bg black
-  set -g window-status-current-fg black
-  set -g window-status-current-bg brightblue
+  set -g window-status-fg colour15
+  set -g window-status-bg colour0
+  set -g window-status-current-fg colour15
+  set -g window-status-current-bg colour1
   set -g window-status-format " #I:#W "
   set -g window-status-current-format " ❐ #I:#W "
 # }}}
