Update statusline to be more flat, and add pomodoro tmux segment.

--- a/tmux.conf
+++ b/tmux.conf
@@ -44,6 +44,10 @@ bind S copy-mode
 # Edit tmux.conf in default $EDITOR
 bind e new-window -n '~/.tmux.conf' "zsh -c '\${EDITOR:-nvim} ~/.tmux.conf && tmux source ~/.tmux.conf && tmux display \"~/.tmux.conf sourced\"'"
 
+# pomodoro hotkeys
+bind-key p run-shell 'pom start >/dev/null 2>&1'
+bind-key P run-shell 'pom stop >/dev/null 2>&1'
+
 # reload tmux.conf {{{
   unbind r
   bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
@@ -86,7 +90,7 @@ bind e new-window -n '~/.tmux.conf' "zsh -c '\${EDITOR:-nvim} ~/.tmux.conf && tm
 
 # Status options {{{
   set-option -g status on
-  set-option -g status-interval 2     # redraw status line every 10 seconds
+  set-option -g status-interval 1     # redraw status line every 10 seconds
   set-option -g status-justify "left"
   set-option -g status-left-length 500
   set-option -g status-right-length 500
@@ -111,22 +115,22 @@ bind e new-window -n '~/.tmux.conf' "zsh -c '\${EDITOR:-nvim} ~/.tmux.conf && tm
   set -g message-bg black
   set -g message-attr bold
 
-  set -g window-status-separator " "
+  set -g window-status-separator ""
   set -g window-status-bell-fg black
   set -g window-status-bell-bg brightred
   set -g window-status-activity-attr bold
 
-  set -g window-status-fg colour15
+  set -g window-status-fg colour14
   set -g window-status-bg colour0
   set -g window-status-current-fg colour15
-  set -g window-status-current-bg colour1
-  set -g window-status-format " #I:#W "
-  set -g window-status-current-format " ❐ #I:#W "
+  set -g window-status-current-bg colour0
+  set -g window-status-format " #I:#W"
+  set -g window-status-current-format "•#I:#W"
 # }}}
 
 
 # status line {{{
-  set-option -g status-left "#(~/.tmux/prompt.sh left)  "
+  set-option -g status-left "#(~/.tmux/prompt.sh left)"
   set-option -g status-right "#(~/.tmux/prompt.sh right)"
 # }}}
 
