--- a/tmux.conf
+++ b/tmux.conf
@@ -107,10 +107,10 @@ bind-key P run-shell 'pom stop >/dev/null 2>&1'
 # }}}
 
 # Status and window appearance and style {{{
-  set -g status-fg white
-  set -g status-bg black
-  set -g pane-border-fg colour012
-  set -g pane-active-border-fg colour012
+  set -g status-fg colour235
+  set -g status-bg colour08
+  set -g pane-border-fg colour09
+  set -g pane-active-border-fg colour09
   set -g message-fg red
   set -g message-bg black
   set -g message-attr bold
@@ -120,10 +120,10 @@ bind-key P run-shell 'pom stop >/dev/null 2>&1'
   set -g window-status-bell-bg brightred
   set -g window-status-activity-attr bold
 
-  set -g window-status-fg colour14
-  set -g window-status-bg colour0
-  set -g window-status-current-fg colour15
-  set -g window-status-current-bg colour0
+  set -g window-status-fg colour235
+  set -g window-status-bg colour08
+  set -g window-status-current-fg colour235
+  set -g window-status-current-bg colour08
   set -g window-status-format " #I:#W"
   set -g window-status-current-format "•#I:#W"
 # }}}
