Get Alacritty up and running.

--- a/tmux.conf
+++ b/tmux.conf
@@ -10,7 +10,7 @@
 set-option -sg escape-time 0 # change the escape time in tmux to zero
 set-option -g history-limit 500000 # Increase scrollback history
 
-# set -g default-command /bin/zsh
+set -g default-terminal "screen-256color-italic"
 set -g default-shell /bin/zsh
 set -g default-command "reattach-to-user-namespace -l zsh" # fix terminal-notifier
 
@@ -23,18 +23,23 @@ set -g pane-base-index 1 # start with pane 1
 setw -g mode-keys vi # enable vim mode
 
 # vi-copy settings {{{
-  bind-key -t vi-copy v begin-selection
-  bind-key -t vi-copy C-v rectangle-toggle
-  bind-key -t vi-copy Escape cancel
+
+  # Copy mode with C-t v
+  unbind v
+  bind v copy-mode
+  bind-key -Tcopy-mode-vi 'v' send -X begin-selection
+  bind-key -Tcopy-mode-vi 'y' send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+  bind-key -Tcopy-mode-vi Escape send -X cancel
+  bind-key -Tcopy-mode-vi V send -X rectangle-toggle
 # }}}
 
-# rename session to git repo {{{
-  unbind n
-  bind-key n run-shell "tmux rename-session $(basename $(git rev-parse --show-toplevel))"
-# }}}
+# # Session related commands {{{
+#   unbind n
+#   bind n new-session -c '"${$(basename `PWD`)//./}"'
 
-# Copy mode with C-t S
-bind S copy-mode
+#   unbind q
+#   bind-key q confirm-before -p "Kill #S (y/n)?" "run-shell 'tmux switch-client -n \\\; kill-session -t \"\$(tmux display-message -p \"#S\")\"'"
+# # }}}
 
 # visual notification of activity in other windows {{{
   setw -g monitor-activity on
@@ -135,14 +140,17 @@ bind-key P run-shell 'pom stop >/dev/null 2>&1'
 # }}}
 
 # Tmux plugins {{{
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'tmux-plugins/tmux-copycat'
-set -g @plugin 'tmux-plugins/tmux-open'
-set -g @plugin 'tmux-plugins/tmux-pain-control'
-set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @tpm_plugins ' \
+  tmux-plugins/tpm \
+  tmux-plugins/tmux-resurrect \
+  tmux-plugins/tmux-continuum \
+  tmux-plugins/tmux-yank \
+  tmux-plugins/tmux-copycat \
+  tmux-plugins/tmux-open \
+  tmux-plugins/tmux-pain-control \
+  christoomey/vim-tmux-navigator \
+  tmux-plugins/tmux-sessionist \
+'
 
 # Check if tmux plugin manager is installed, otherwise clone it.
 if "test ! -d ~/.tmux/plugins/tpm" \
