--- a/tmux.conf
+++ b/tmux.conf
@@ -10,13 +10,13 @@
 set-option -sg escape-time 0 # change the escape time in tmux to zero
 set-option -g history-limit 500000 # Increase scrollback history
 
-set -g default-terminal "screen-256color-italic"
+set -g default-terminal "xterm-256color-italic"
 set -g default-shell /bin/zsh
 set -g default-command "reattach-to-user-namespace -l zsh" # fix terminal-notifier
 
 # Enable true (24bit) colors for version >= 2.2
 # See https://deductivelabs.com/en/2016/03/using-true-color-vim-tmux/
-set -ga terminal-overrides ',*:Tc'
+set -ga terminal-overrides ',xterm-256color-italic:Tc'
 set -g base-index 1 # start with window 1 (instead of 0)
 set -g pane-base-index 1 # start with pane 1
 
