--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -42,21 +42,21 @@ draw_bold_text_with_bright_colors: false
 font:
   # The normal (roman) font face to use.
   normal:
-    family: OperatorMono Nerd Font
+    family: FuraCode Nerd Font
     # Style can be specified to pick a specific face.
-    style: Book
+    style: Retina
 
   # The bold font face
   bold:
-    family: OperatorMono Nerd Font
+    family: FuraCode Nerd Font
     # Style can be specified to pick a specific face.
     style: Bold
 
   # The italic font face
   italic:
-    family: OperatorMono Nerd Font
+    family: FuraCode Nerd Font
     # Style can be specified to pick a specific face.
-    style: Book Italic
+    style: Light
 
   # Point size of the font
   size: 18.0
