Use different glyphs for pomodoro segment

--- a/tmux.conf
+++ b/tmux.conf
@@ -42,8 +42,8 @@ setw -g mode-keys vi # enable vim mode
 bind e new-window -n '~/.tmux.conf' "zsh -c '\${EDITOR:-nvim} ~/.tmux.conf && tmux source ~/.tmux.conf && tmux display \"~/.tmux.conf sourced\"'"
 
 # pomodoro hotkeys
-bind-key p run-shell 'pom start >/dev/null 2>&1'
-bind-key P run-shell 'pom stop >/dev/null 2>&1'
+bind-key p run-shell 'pom start >/dev/null 2>&1 && tmux source ~/.tmux.conf'
+bind-key P run-shell 'pom stop >/dev/null 2>&1 && tmux source ~/.tmux.conf'
 
 # reload tmux.conf {{{
   unbind r
