--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -86,41 +86,75 @@ render_timer: false
 # and cursor.background colors, otherwise invert the colors of the cursor.
 custom_cursor_colors: true
 
-# Colors (Gruvbox)
+# # Colors (Gruvbox)
+# colors:
+#   # Default colors
+#   primary:
+#     background: '0x353535'
+#     foreground: '0xefe1bf'
+
+#   # Colors the cursor will use if `custom_cursor_colors` is true
+#   cursor:
+#     text: '0xffffff'
+#     cursor: '0xc7c7c7'
+
+#   # Normal colors
+#   normal:
+#     black:   '0x353535'
+#     red:     '0xd83925'
+#     green:   '0xa8a521'
+#     yellow:  '0xe0a82a'
+#     blue:    '0x54969a'
+#     magenta: '0xc07998'
+#     cyan:    '0x7aab7d'
+#     white:   '0xc9bba4'
+
+#   # Bright colors
+#   bright:
+#     black:   '0x8f8277'
+#     red:     '0xfe6143'
+#     green:   '0xc4c431'
+#     yellow:  '0xfcc73c'
+#     blue:    '0x94b3a8'
+#     magenta: '0xdd9aab'
+#     cyan:    '0x9ec98e'
+#     white:   '0xefe1bf'
+
+# Colors (cake16)
 colors:
   # Default colors
   primary:
-    background: '0x353535'
-    foreground: '0xefe1bf'
+    background: '0xd0c7b8'
+    foreground: '0x774f38'
 
   # Colors the cursor will use if `custom_cursor_colors` is true
   cursor:
-    text: '0xffffff'
-    cursor: '0xc7c7c7'
+    text: '0x774f38'
+    cursor: '0xFFFFFF'
 
   # Normal colors
   normal:
-    black:   '0x353535'
-    red:     '0xd83925'
-    green:   '0xa8a521'
-    yellow:  '0xe0a82a'
-    blue:    '0x54969a'
-    magenta: '0xc07998'
-    cyan:    '0x7aab7d'
-    white:   '0xc9bba4'
+    black:   '0x774f38'
+    red:     '0xb95942'
+    green:   '0x308444'
+    yellow:  '0x996e1f'
+    blue:    '0x50707e'
+    magenta: '0xaa56b2'
+    cyan:    '0x308090'
+    white:   '0xede4d4'
 
   # Bright colors
   bright:
-    black:   '0x8f8277'
-    red:     '0xfe6143'
-    green:   '0xc4c431'
-    yellow:  '0xfcc73c'
-    blue:    '0x94b3a8'
-    magenta: '0xdd9aab'
-    cyan:    '0x9ec98e'
-    white:   '0xefe1bf'
+    black:   '0x878787'
+    red:     '0xf10000'
+    green:   '0x82a3b3'
+    yellow:  '0xc79747'
+    blue:    '0x678797'
+    magenta: '0xafafaf'
+    cyan:    '0xe4dccc'
+    white:   '0xf7efdf'
 
-# # Colors (onehalf)
+# Colors (onehalf)
 # colors:
 #   # Default colors
 #   primary:
@@ -153,53 +187,6 @@ colors:
 #     magenta: '0xd291e4'
 #     cyan:    '0x65c2cd'
 #     white:   '0xe3e5e9'
-
-
-# Colors (Tomorrow Night Bright)
-# colors:
-#   # Default colors
-#   primary:
-#     background: '0x000000'
-#     foreground: '0xeaeaea'
-
-#   # Colors the cursor will use if `custom_cursor_colors` is true
-#   cursor:
-#     text: '0x000000'
-#     cursor: '0xffffff'
-
-#   # Normal colors
-#   normal:
-#     black:   '0x000000'
-#     red:     '0xd54e53'
-#     green:   '0xb9ca4a'
-#     yellow:  '0xe6c547'
-#     blue:    '0x7aa6da'
-#     magenta: '0xc397d8'
-#     cyan:    '0x70c0ba'
-#     white:   '0xffffff'
-
-#   # Bright colors
-#   bright:
-#     black:   '0x666666'
-#     red:     '0xff3334'
-#     green:   '0x9ec400'
-#     yellow:  '0xe7c547'
-#     blue:    '0x7aa6da'
-#     magenta: '0xb77ee0'
-#     cyan:    '0x54ced6'
-#     white:   '0xffffff'
-
-#   # Dim colors (Optional)
-#   dim:
-# ￼   black:   '0x333333'
-# ￼   red:     '0xf2777a'
-# ￼   green:   '0x99cc99'
-# ￼   yellow:  '0xffcc66'
-# ￼   blue:    '0x6699cc'
-# ￼   magenta: '0xcc99cc'
-# ￼   cyan:    '0x66cccc'
-# ￼   white:   '0xdddddd'
-
 
 # Visual Bell
 #
