--- a/tmux.conf
+++ b/tmux.conf
@@ -104,24 +104,17 @@ bind-key P run-shell 'pom stop >/dev/null 2>&1 && tmux source ~/.tmux.conf'
 # }}}
 
 # Status and window appearance and style {{{
-  set -g status-fg colour0
-  set -g status-bg colour006
-  set -g pane-border-fg colour04
-  set -g pane-active-border-fg colour04
-  set -g message-fg red
-  set -g message-bg black
-  set -g message-attr bold
+  set -g status-style fg="#d0c7b8",bg=colour0
+  set -g pane-border-style fg="#c0b8a5",bg="#c0b8a5"
+  set -g pane-active-border-style fg="#c0b8a5",bg="#c0b8a5"
+  set -g message-style fg=white,bg=blue,bold
 
-  set -g window-status-separator ""
-  set -g window-status-bell-fg black
-  set -g window-status-bell-bg brightred
-  set -g window-status-activity-attr bold
+  set -g window-status-separator "│"
+  set -g window-status-bell-style fg=white,bg=red,bold
 
-  set -g window-status-fg colour0
-  set -g window-status-bg colour006
-  set -g window-status-current-fg colour15
-  set -g window-status-current-bg colour06
-  set -g window-status-format " #I:#W"
+  set -g window-status-style fg="#d0c7b8",bg=colour0
+  set -g window-status-current-style fg="#d0c7b8",bg=colour0,bold
+  set -g window-status-format "#I:#W"
   set -g window-status-current-format "•#I:#W"
 # }}}
 
