--- a/tmux.conf
+++ b/tmux.conf
@@ -105,8 +105,8 @@ bind-key P run-shell 'pom stop >/dev/null 2>&1 && tmux source ~/.tmux.conf'
 
 # Status and window appearance and style {{{
   set -g status-style fg="#d0c7b8",bg=colour0
-  set -g pane-border-style fg="#c0b8a5",bg="#c0b8a5"
-  set -g pane-active-border-style fg="#c0b8a5",bg="#c0b8a5"
+  set -g pane-border-style fg="#e7ddc8",bg="#e7ddc8"
+  set -g pane-active-border-style fg="#e7ddc8",bg="#e7ddc8"
   set -g message-style fg=white,bg=blue,bold
 
   set -g window-status-separator "│"
