--- a/tmux.conf
+++ b/tmux.conf
@@ -104,16 +104,17 @@ bind-key P run-shell 'pom stop >/dev/null 2>&1 && tmux source ~/.tmux.conf'
 # }}}
 
 # Status and window appearance and style {{{
-  set -g status-style fg="#d0c7b8",bg=colour0
-  set -g pane-border-style fg="#e7ddc8",bg="#e7ddc8"
-  set -g pane-active-border-style fg="#e7ddc8",bg="#e7ddc8"
-  set -g message-style fg=white,bg=blue,bold
+  set -g status-style fg=colour07,bg=colour04
+  set -g pane-border-style fg=colour07
+  set -g pane-active-border-style fg=colour07
+  set -g message-style fg=colour07,bg=colour04,bold
 
   set -g window-status-separator "│"
-  set -g window-status-bell-style fg=white,bg=red,bold
+  set -g window-status-bell-bg red
+  set -g window-status-bell-fg white
 
-  set -g window-status-style fg="#d0c7b8",bg=colour0
-  set -g window-status-current-style fg="#d0c7b8",bg=colour0,bold
+  set -g window-status-style fg=colour07,bg=colour04,
+  set -g window-status-current-style fg=colour07,bg=colour04,bold
   set -g window-status-format "#I:#W"
   set -g window-status-current-format "•#I:#W"
 # }}}
